<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_invitations"
        android:icon="@drawable/ic_manage_invitations"
        android:title="Applicants" />

    <item
        android:id="@+id/navigation_main_user_page"
        android:icon="@drawable/ic_profile"
        android:title="User Page" />

    <item
        android:id="@+id/navigation_employers"
        android:icon="@drawable/ic_manage_employers"
...
