<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jobsFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- RecyclerView for applications -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/applicationsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:padding="16dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:overScrollMode="never"
        android:layout_marginBottom="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>